--- a/TestBlazor/Shared/NavMenu.razor
+++ b/TestBlazor/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Covid.Client</a>
+    <a class="navbar-brand" href="">TestBlazor</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,13 +18,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="employees">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Employees
+            <NavLink class="nav-link" href="test">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> test
             </NavLink>
         </li>
     </ul>
